<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:background="@color/dirtywhite"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/partyIcon_imageView"
        android:src="@mipmap/ic_ping" />

    <TextView
        android:id="@+id/text_view_partyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/partyName_textView"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/inputlabel"
        android:textSize="@dimen/titleList" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/viewParty_imageView"
        android:src="@mipmap/ic_more_info" />

</LinearLayout>