<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtywhite"
    android:orientation="vertical"
    tools:context="com.gdg.jpq.maltratocero.SettingMessageAlertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referenceContactLabel_textView"
                android:textColor="@color/inputlabel"
                android:textSize="@dimen/labelForm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_referenceContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referenceContact_textView"
                android:textColor="@color/inputlabel"
                android:textSize="@dimen/simpleText"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_referencePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/inputlabel"
                android:textSize="@dimen/simpleText"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_searchContact"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightpurple"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/btnSearchContact"
            android:textColor="@color/white_bg"
            android:textSize="@dimen/buttonForm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message1Label_textView"
            android:textColor="@color/inputlabel"
            android:textSize="@dimen/labelForm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_message1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/borderlist_drawable"
            android:inputType="text|textMultiLine"
            android:paddingBottom="8dp"
            android:paddingEnd="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/inputForm" />

        <TextView
            android:id="@+id/message2Label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/message2Label_textView"
            android:textColor="@color/inputlabel"
            android:textSize="@dimen/labelForm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_message2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/borderlist_drawable"
            android:inputType="text|textMultiLine"
            android:paddingBottom="8dp"
            android:paddingEnd="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/inputForm" />

        <TextView
            android:id="@+id/message3Label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/message3Label_textView"
            android:textColor="@color/inputlabel"
            android:textSize="@dimen/labelForm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_message3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/borderlist_drawable"
            android:inputType="text|textMultiLine"
            android:paddingBottom="8dp"
            android:paddingEnd="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/inputForm" />
    </LinearLayout>

    <Button
        android:id="@+id/button_saveMessageAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/darkpurple"
        android:text="@string/saveAlertMessages_button"
        android:textColor="@color/white_bg"
        android:textSize="@dimen/buttonForm" />

</LinearLayout>